# otus-filter-ip

./: .gitignore  CMakeLists.txt  README.md  ip.cpp  ip.h  main.cpp  test_version.cpp
.github/workflows/: release.yml
